2009-03-16  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py: Disable CPUFreq probing as they will be
	built into kernel.

2009-03-04  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py: Add occasional debug calls for
	better logging into /var/log/mudur.log

2009-03-03  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py: The I/O redirection of start-stop-daemon
	doesn't work at all. Implemented a new method run_async()
	which runs a command in background and optionally redirects
	its output and error streams.
	* bin/mudur.py (startUdev): Use run_async() for spawning
	udevadm monitor instead of buggy start-stop-daemon.
	* bin/mudur.py (Logger.sync): Use epoch time instead of
	uptime for not reading /proc/uptime for every log attempt.
	Use writelines() instead of map().

2009-02-26  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/network.py: Remove useless import.
	* bin/service.py (loadConfig, Service.__init__): Rename shadowed builtin variables.
	* bin/update-environment.py (read_env_d): Rename shadowed builtin variables.
	* bin/mudur.py:
	Comment the code,
	Rename some functions for better self-explanation,
	Split setupUdev() to setupUdev() and startUdev(),
	Make the code pychecker clean.
	* bin/mudur.py (loadFile, writeToFile):
	Use open() instead of file().
	* bin/mudur.py (setupUdev):
	Limit the size of /dev to 10M,
	No need to traverse /lib/udev/devices, just copy it recursively,
	Remove uevent_helper hack for older kernels.
	* bin/mudur.py (startUdev):
	Use start-stop-daemon for udev monitor startup/cleanup.
	* bin/mudur.py (stopSystem):
	Call stopUdev() to stop udev daemon.

2009-02-25  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (copyUdevFiles): Implement a new method for
	copying the rules and log file instead of spawning a new process.

2009-02-23  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (setupUdev):
	Use start-stop-daemon for udev startup,
	The default timeout is 180, no need to give it as a parameter,