@@ -769,11 +769,6 @@ def copyUdevRules():
             ui.warn(_("Can't move persistent udev rules from /dev/.udev"))
             pass
 
-    # If any persistent rules exist in /etc/udev/rules.d, trigger udev
-    # for processing them.
-    if glob.glob("/etc/udev/rules.d/70-persistent-*"):
-        run("/sbin/udevadm", "trigger")
-
 def setupUdev():
 
     ui.info(_("Mounting /dev"))
